syntax = "proto3";

package pb;

import "ticker.proto";

option go_package = "rpc-ticker-api/pb";

message CreateTickerRequest {
    string symbol = 1;
    string description = 2;
    string exchange = 3;
    string currency = 4;
}

message CreateTickerResponse {
    Ticker ticker = 1;
}
